<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/blue">

            <Button
                android:id="@+id/cancel"
                android:onClick="cancel"
                android:text="@string/cancel"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:background="@color/blue"
                android:textAlignment="textStart"
                android:textSize="@dimen/titleBarText"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-light"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:text="@string/editProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/titleBarText"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:alpha=".5"
                android:id="@+id/newPerson"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/update"
                android:onClick="update"
                android:text="@string/update"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:background="@color/blue"
                android:textAlignment="textStart"
                android:textSize="@dimen/titleBarText"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-light"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:background="@color/blue">

                <TextView
                    android:text="@string/name"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:textAlignment="center"
                    android:layout_gravity="center|bottom"
                    android:gravity="center"
                    android:textSize="@dimen/tinyText"
                    android:padding="5dp"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:background="@color/blue">

                <EditText
                    android:id="@+id/name"
                    android:hint="@string/nameHint"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:textAlignment="center"
                    android:layout_gravity="center|top"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/largeMargin"
                    android:layout_marginRight="@dimen/largeMargin"
                    android:textSize="@dimen/smallText"
                    android:background="@drawable/rounded"
                    android:padding="5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:background="@color/blue">

                <TextView
                    android:text="@string/dob"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:textAlignment="center"
                    android:layout_gravity="center|bottom"
                    android:gravity="center"
                    android:textSize="@dimen/tinyText"
                    android:padding="5dp"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:background="@color/blue">

                <Button
                    android:id="@+id/dateButton"
                    android:text="@string/dob"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:textAlignment="center"
                    android:layout_gravity="center|top"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/largeMargin"
                    android:layout_marginRight="@dimen/largeMargin"
                    android:textSize="@dimen/smallText"
                    android:background="@drawable/rounded"
                    android:textAllCaps="false"
                    android:padding="5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:background="@color/blue">

                <TextView
                    android:text="@string/age"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:textAlignment="center"
                    android:layout_gravity="center|bottom"
                    android:gravity="center"
                    android:textSize="@dimen/tinyText"
                    android:padding="5dp"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:background="@color/blue">

                <EditText
                    android:id="@+id/ageEditText"
                    android:hint="@string/ageHint"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:textAlignment="center"
                    android:layout_gravity="center|top"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/largeMargin"
                    android:layout_marginRight="@dimen/largeMargin"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/smallText"
                    android:background="@drawable/rounded"
                    android:padding="5dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:onClick="logOut"
        android:layout_height="45dp"
        android:layout_width="45dp"
        android:background="@drawable/logout"
        android:adjustViewBounds="true"
        android:layout_marginTop="45dp"/>

</RelativeLayout>
